@@ -170,10 +170,13 @@
 #
 #SMTP_DATA_URL			URL
 
-
 # If this flag is set, simta will allow connections with invalid reverse DNS.
 #
 #IGNORE_REVERSE
+
+# An optional URL to give incoming connections that fails TCP wrapper checks.
+#
+#LIBWRAP_URL			URL
 
 # An optional URL to give incoming connections that fails DNS reverse lookup.
 #
