@@ -164,6 +164,7 @@ extern char				*simta_dir_slow;
 extern char				*simta_dir_dead;
 extern char				*simta_dir_local;
 extern char				*simta_data_url;
+extern char				*simta_libwrap_url;
 extern char				*simta_reverse_url;
 extern char				*simta_domain;
 extern char				*simta_mail_filter;
